# Econ-App

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  schema.sql
docs/adr/: 0001-vision-and-scope.md  0002-mvp-feature-scope.md  0003-information-architecture.md  0004-technology-stack.md  0005-data-model.md
docs/specs/: feature-inventory.md  use-cases.md  wireframes.md
scripts/fred/: README.md  analyze_fred_metadata_catalog.py  pull_fred_release_series_metadata.py
seeds/: fred_core_series_seed.csv  fred_core_series_seed_README.md
src/econ_app/: __init__.py  __main__.py  app.py  config.py
src/econ_app/services/: __init__.py  app_cache.py  cache.py  database.py  fred_client.py  models.py  paths.py  series_catalog.py  transforms.py
src/econ_app/ui/: __init__.py  main_window.py  preferences_dialog.py
src/econ_app/ui/charts/: __init__.py  line_chart.py
src/econ_app/ui/views/: __init__.py  base_view.py  core_indicators.py  placeholders.py  series_detail.py
src/econ_app/ui/views/my_calendar/: __init__.py  grid_subview.py  list_subview.py  my_calendar_view.py
tests/: test_cache.py  test_config.py  test_core_indicators_view.py  test_database.py  test_fred_client.py  test_series_catalog.py  test_series_detail.py  test_smoke.py  test_transforms.py
tests/fixtures/: fred_observations_cpiaucsl.json  fred_series_cpiaucsl.json
