[project]
name = "econ-app"
version = "0.1.0"
description = "A personal desktop application for exploring and learning about U.S. economic data"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Carey Carroll" }
]
license = { text = "MIT" }
keywords = ["economics", "fred", "charts", "pyside6", "desktop"]

dependencies = [
    # GUI framework
    "PySide6>=6.6.0",
    # Charts
    "pyqtgraph>=0.13.3",
    # Data manipulation
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    # HTTP client for FRED API
    "httpx>=0.25.0",
    # Config / secrets
    "python-dotenv>=1.0.0",
    "keyring>=24.0.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pre-commit>=3.5.0",
    "respx>=0.20.0",
]

[project.scripts]
econ-app = "econ_app.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/econ_app"]

# ------------------------------------------------------------------
# Ruff — formatting + linting
# ------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "data",
    "docs",
    "scripts",
]

[tool.ruff.lint]
# Sensible defaults for a Python 3.11 app project
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear (common bug patterns)
    "UP",   # pyupgrade (modern syntax)
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long — the formatter handles this; ignore for edge cases
    "B008",  # do not perform function calls in argument defaults (fine for Qt patterns)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # allow assert in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ------------------------------------------------------------------
# Pytest
# ------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",              # show summary of all non-passing outcomes
    "--strict-markers", # error on unknown markers
    "--strict-config",  # error on unknown config keys
]
